# Browser-AI-agent

./: .env.example  .gitignore  README.md  bing.html  pyproject.toml  test_bing.py  test_llm.py  test_models.py  test_search.py
alembic/: env.py
alembic/versions/: 20260416_0001_initial.py
app/: __init__.py  main.py
app/agent/: __init__.py  answerer.py  intake.py  orchestrator.py  planner.py  verification.py
app/agent/deals_tracker/: controller.py  evaluator.py  models.py  scraper.py  service.py
app/agent/task_automation/: __init__.py  composer.py  controller.py  executor.py  extractor.py  fetcher.py  flight_extractor.py  flight_utils.py  planner.py  schema.py  trusted_sources.py
app/api/: deals_routes.py  routes.py  task_automation_routes.py
app/browser/: worker.py
app/core/: config.py  database.py  llm.py  logging.py  stream.py  sync_db.py
app/extraction/: __init__.py  web.py  youtube.py
app/models/: __init__.py  db.py  schemas.py
app/ranking/: __init__.py  source_ranker.py
app/safety/: __init__.py  guardrails.py
app/storage/: repositories.py
app/tests/: test_planner_and_ranker.py
app/ui/: app.js  deals.css  deals.html  deals.js  index.html  styles.css  task_automation.css  task_automation.html  task_automation.js
app/utils/: text.py
general_browser_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
